added in .ignorelist to exclude the output folder and the executables LAVESIgen

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 # help e.g. under https://git-scm.com/book/en/v2/Git-Basics-Recording-Changes-to-the-Repository
 
+# exclude executable
+/LAVESIgen
+
 # exclude o(bject) and a(rchive)
 *.[oa]
 
 # exclude temporary files
 *~
+
+# exclude output dir
+output/
