added README and updated information in this file; updated .gitignore; updated executeable name

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # help e.g. under https://git-scm.com/book/en/v2/Git-Basics-Recording-Changes-to-the-Repository
 
 # exclude executable
-/LAVESIgen
+/LAVESI_WIND
+# exclude redirected output streams
+nohup.out
 
 # exclude o(bject) and a(rchive)
 *.[oa]
