updated seeddispersal now depending on elevation

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@ build/
 # exclude output files in output dir
 output/*.csv
 output/*.txt
+output/*.png
+output/*.pdf
+output/*.mp4
+output/*.gif
+
 # exclude time usage output files
 t_*.txt
 # exclude pollen-dispersal output files
